Set minimum memory to 64 MB and max to 256 MB.