@@ -1,2 +1,2 @@
-java -Djava.library.path=nativelibs -jar flowpaint.jar
+java -Djava.library.path=nativelibs -Xms32m -Xmx256m -XX:MaxPermSize=128m -jar flowpaint.jar
 
